--- a/view/src/features/Inventory/RewardHistory/RewardHistory.css
+++ b/view/src/features/Inventory/RewardHistory/RewardHistory.css
@@ -1,6 +1,5 @@
 .rewards-history {
     background-color: #135382;
-    color: lightblue;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -53,6 +52,20 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.date-used-delete-container {
+    display: flex;
+}
+
+.history-date-used {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.history-delete-button {
+    margin-left: .3rem;
 }
 
 
