Add Google to Signup, fix app css

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -11,3 +11,11 @@
   width: 100%;
   position: relative;
 }
+
+.logged-out-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+}
