--- a/view/src/components/QuantityInput/QuantityInput.css
+++ b/view/src/components/QuantityInput/QuantityInput.css
@@ -27,6 +27,7 @@
     flex-direction: column;
 }
 
+
 .quantity-input-container input {
     width: 2rem;
     margin-right: 1rem;
@@ -67,4 +68,10 @@
     cursor: default !important;
     border: none !important;
     color: #7b828a !important;
+}
+
+@media screen and (max-width: 360px) {
+    .quantity-input-container label {
+        font-size: .8rem;
+    }
 }
