--- a/view/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
+++ b/view/src/features/Inventory/ViewInventoryItem/ViewInventoryItem.css
@@ -3,9 +3,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 300px;
+    min-width: 200px
 }
 
-
+.view-inventory-item-container p {
+    word-wrap: break-word;
+    width: 100%;
+}
 
 .use-button {
     border: none;
