--- a/view/src/features/Inventory/RewardHistory/RewardHistory.css
+++ b/view/src/features/Inventory/RewardHistory/RewardHistory.css
@@ -1,9 +1,12 @@
 .rewards-history {
     background-color: #135382;
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
+    min-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .rewards-history h1 {
@@ -14,10 +17,8 @@
 }
 
 .inventory-history-box {
-    width: 80%;
     display: flex;
     align-items: center;
-    height: fit-content;
     border: none;
     border-radius: .4rem;
     background-color: #97c8ed;
@@ -28,9 +29,12 @@
     padding: 10px;
     margin-bottom: 1em;
     justify-content: space-between;
-    min-height: 3rem;
+    min-height: 5rem;
     max-width: 20rem;
+    max-height: 5rem;
+    min-width: 20rem;
 }
+
 
 .inventory-history-box img {
     height: 2.5rem;
@@ -45,13 +49,30 @@
 .history-container-1 {
     display: flex;
     align-items: center;
+   width: 40%;
 }
-
 .history-container-2 {
-    margin-left: 1rem;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    width: 40%;
+}
+
+.history-container-2 p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: start;
+    max-height: 3rem;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Limit to 2 lines */
+    -webkit-box-orient: vertical;
+    margin-left: .5rem;
+    min-width: 100%;
+    width: 65%;
+}
+
+.back-reward-history {
+    margin-left: 1rem;
 }
 
 .date-used-delete-container {
@@ -68,6 +89,13 @@
     margin-left: .3rem;
 }
 
+.delete-reward-icon {
+    color: #135382;
+}
+
+.reward-description-history {
+    font-size: .9rem;
+}
 
 @media (max-width: 350px) {
     .rewards-history h1 {
@@ -89,4 +117,30 @@
     }
 }
 
+@media screen and (max-width: 1150px) {
+    .history-container-2 p {
+        width: 55%;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .history-date-used {
+        font-size: .7rem;
+    }
+    .inventory-history-box {
+        width: 80%;
+        min-width: 12rem;
+        overflow: hidden;
+    }
+    .history-delete-button {
+        padding: 0;
+        margin-left: 5px;
+    }
+    .history-container-2 p {
+        width: 55%;
+    }
+    .reward-description-history {
+        font-size: .7rem;
+    }
+}
 
