--- a/view/src/features/Tasks/TaskItem/TaskItem.css
+++ b/view/src/features/Tasks/TaskItem/TaskItem.css
@@ -13,7 +13,9 @@
 
 .view-task {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
     height: fit-content;
     cursor: pointer;
     border: none;
@@ -25,6 +27,10 @@
     padding: .5rem;
     width: 100%;
     max-width: 15rem;
+    min-height: 5rem;
+    max-height: 5rem;
+    overflow: hidden;
+    height: 5rem;
 }
 
 
@@ -32,6 +38,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-between;
     min-width: 12rem;
     max-width: 15rem;
     background-color: #135382;
@@ -41,12 +48,15 @@
     font-size: 1rem;
     border-radius: .4rem;
     padding: 10px;
+    max-width: 15rem;
+    min-height: 5rem;
+    max-height: 6rem;
+    overflow: hidden;
+    height: 6rem;
+    width: 100%;
 }
 
-.view-task, .view-reward {
-    display: inline-block;
-    transition: transform 0.2s ease;
-}
+
 
 .view-task:hover, .view-reward:hover {
     transform: scale(1.05);
@@ -58,7 +68,6 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin-top: 1rem;
 }
 
 .deadline-details p {
@@ -67,7 +76,7 @@
 }
 
 .status-box {
-width: 100%;
+    width: 100%;
    display: flex;
    justify-content: space-between;
 }
@@ -87,9 +96,40 @@ width: 100%;
     margin: 0;
 }
 
-#task-name-text {
+.task-name-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-height: 65%;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.task-name-container p {
     margin: 0;
     text-align: start;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* Limit to 2 lines */
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    max-width: 100%;
+}
+
+.overdue-task-name-container {
+    display: flex;
+    align-items: flex-start;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.overdue-task-name-container p {
+    margin: 0;
+    text-align: start;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
+    white-space: nowrap;
 }
 
 #completed-text {
