--- a/view/src/features/Authentication/Login/LoginPage.css
+++ b/view/src/features/Authentication/Login/LoginPage.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     padding: 1.5rem;
     background-color: aliceblue;
+    border-radius: .8rem;
 }
 
 .sign-up-link-text {
@@ -18,4 +19,5 @@
 .alternate-login {
     display: flex;
     justify-content: center;
+    
 }
