--- a/view/src/features/Authentication/Signup/SignupPage.css
+++ b/view/src/features/Authentication/Signup/SignupPage.css
@@ -5,6 +5,9 @@
     color: aliceblue;
     max-width: 300px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
  }
  
 .sign-up-form {
@@ -12,8 +15,17 @@
      flex-direction: column;
      padding: 1.5rem;
      background-color: aliceblue;
+     border-radius: .8rem;
+     width: 100%;
  }
  
- .sign-up-link-text {
-     color: aliceblue
+ .sign-up-link-text, .sign-up-link-text-2 {
+     color: aliceblue;
+     padding-top: 0;
+     margin-top: 0;
+ }
+
+ .sign-up-link-text h2 {
+    padding-top: 0;
+    margin-top: 0;
  }
