--- a/view/src/features/Authentication/Signup/SignupPage.css
+++ b/view/src/features/Authentication/Signup/SignupPage.css
@@ -29,3 +29,11 @@
     padding-top: 0;
     margin-top: 0;
  }
+
+ .pending {
+    color: black;
+    border-radius: 1rem;
+    padding: .8rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
+ }
